--- a/ML/deeplearning_class/01_Least_Square_Method.ipynb
+++ b/ML/deeplearning_class/01_Least_Square_Method.ipynb
@@ -26,6 +26,8 @@
     "x=[2, 4, 6, 8]\n",
     "y=[81, 93, 91, 97]\n",
     "\n",
+    "\n",
+    "print(\"Pima_Indian\")\n",
     "# x와 y의 평균값\n",
     "mx = np.mean(x)\n",
     "my = np.mean(y)\n",
@@ -52,7 +54,7 @@
     "\n",
     "# 출력으로 확인\n",
     "print(\"기울기 a =\", a)\n",
-    "print(\"y 절편 b =\", b)"
+    "print(\"y 절편 b =\", b)\n"
    ]
   },
   {
