--- a/ML/deeplearning_class/03_Linear_Regression.ipynb
+++ b/ML/deeplearning_class/03_Linear_Regression.ipynb
@@ -81,10 +81,10 @@
     "\n",
     "#경사 하강법을 시작합니다.\n",
     "for i in range(epochs): # epoch 수 만큼 반복\n",
-    "    y_hat = a * x_data + b  #y를 구하는 식을 세웁니다\n",
-    "    error = y_data - y_hat  #오차를 구하는 식입니다.\n",
-    "    a_diff = -(2/len(x_data)) * sum(x_data * (error)) # 오차함수를 a로 미분한 값입니다. \n",
-    "    b_diff = -(2/len(x_data)) * sum(error)  # 오차함수를 b로 미분한 값입니다. \n",
+    "    y_hat = a * x_data + b  # y를 구하는 식을 세웁니다\n",
+    "    error = y_data - y_hat  # 오차를 구하는 식입니다.\n",
+    "    a_diff = -(2/len(x_data)) * sum(x_data * (error)) # 오차함수를 a로 편미분한 값입니다. \n",
+    "    b_diff = -(2/len(x_data)) * sum(error)  # 오차함수를 b로 편미분한 값입니다. \n",
     "    a = a - lr * a_diff  # 학습률을 곱해 기존의 a값을 업데이트합니다.\n",
     "    b = b - lr * b_diff  # 학습률을 곱해 기존의 b값을 업데이트합니다.\n",
     "    if i % 100 == 0:    # 100번 반복될 때마다 현재의 a값, b값을 출력합니다.\n",
@@ -116,6 +116,39 @@
     "plt.plot([min(x_data), max(x_data)], [min(y_pred), max(y_pred)])\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "기울기 :  [2.3] 절편 :  79.0\n"
+    }
+   ],
+   "source": [
+    "#Using scikit-leran 경사하강법\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "data = [[2,81], [4,93],[6,91],[8,97]]\n",
+    "y = [i[1] for i in data]\n",
+    "x = [[2],[4],[6],[8]]\n",
+    "\n",
+    "model = LinearRegression() #학습이 없음 그래서 한번에 결과값이 나옴\n",
+    "model.fit(x,y)\n",
+    "print(\"기울기 : \", model.coef_, \"절편 : \", model.intercept_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -134,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
