--- a/ML/run_project/03_Iris_Multi_Classfication.ipynb
+++ b/ML/run_project/03_Iris_Multi_Classfication.ipynb
@@ -34,9 +34,10 @@
     "tf.random.set_seed(3)\n",
     "\n",
     "# 데이터 입력\n",
-    "df = pd.read_csv('../dataset/iris.csv', names = [\"sepal_length\", \"sepal_width\", \"petal_length\", \"petal_width\", \"species\"])\n",
+    "df = pd.read_csv('../dataset/iris.csv',\n",
+    "                     names = [\"sepal_length\", \"sepal_width\", \"petal_length\", \"petal_width\", \"species\"])\n",
     "\n",
-    "# 그래프로 확인\n",
+    "# 그래프로 확인 \n",
     "sns.pairplot(df, hue='species');\n",
     "plt.show()"
    ]
