--- a/ML/deeplearning_class/02_Mean_Squared_Error.ipynb
+++ b/ML/deeplearning_class/02_Mean_Squared_Error.ipynb
@@ -3,18 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "공부시간=2, 실제점수=81, 예측점수=82\n",
-      "공부시간=4, 실제점수=93, 예측점수=88\n",
-      "공부시간=6, 실제점수=91, 예측점수=94\n",
-      "공부시간=8, 실제점수=97, 예측점수=100\n",
-      "MSE 최종값: 11.0\n"
-     ]
+     "name": "stdout",
+     "text": "공부시간=2, 실제점수=81, 예측점수=82\n공부시간=4, 실제점수=93, 예측점수=88\n공부시간=6, 실제점수=91, 예측점수=94\n공부시간=8, 실제점수=97, 예측점수=100\nMSE 최종값: 11.0\n"
     }
    ],
    "source": [
@@ -34,7 +30,7 @@
     "def predict(x):\n",
     "   return fake_a_b[0]*x + fake_a_b[1]\n",
     "\n",
-    "# MSE 함수\n",
+    "# MSE 함수 ; mean -> 평균함수\n",
     "def mse(y, y_hat):\n",
     "   return ((y - y_hat) ** 2).mean()\n",
     "\n",
@@ -45,7 +41,7 @@
     "# 예측값이 들어갈 빈 리스트\n",
     "predict_result = []\n",
     "\n",
-    "# 모든 x값을 한 번씩 대입하여 predict_result 리스트완성.\n",
+    "# 모든 x값을 한 번씩 대입하여 predict_result 리스트완성. 위에 predict_result에 추가\n",
     "for i in range(len(x)):\n",
     "   predict_result.append(predict(x[i]))\n",
     "   print(\"공부시간=%.f, 실제점수=%.f, 예측점수=%.f\" % (x[i], y[i], predict(x[i])))\n",
@@ -78,7 +74,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
