What is Clustring #1

--- a/ML/run_project/train/Proportion of Successs in Bernoulli Trails.ipynb
+++ b/ML/run_project/train/Proportion of Successs in Bernoulli Trails.ipynb
@@ -79,6 +79,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "b'$2b$12$R1U2nj7GfxZUsQ8pMky8veB8T40SI4SsSnkH5knivQr//SsmcqLDe'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import bcrypt\n",
+    "\n",
+    "password = '1234'\n",
+    "print(bcrypt.checkpw(bytes(password, encoding=\"ascii\"), hashedPassword))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
