--- a/ML/run_project/03_Iris_Multi_Classfication.ipynb
+++ b/ML/run_project/03_Iris_Multi_Classfication.ipynb
@@ -170,6 +170,7 @@
     "X = dataset[:,0:4].astype(float)\n",
     "Y_obj = dataset[:,4]\n",
     "\n",
+    "# One - hot encoding\n",
     "# 문자열을 숫자로 변환\n",
     "e = LabelEncoder()\n",
     "e.fit(Y_obj)\n",
@@ -179,9 +180,12 @@
     "# 모델의 설정\n",
     "model = Sequential()\n",
     "model.add(Dense(16,  input_dim=4, activation='relu'))\n",
+    "# 출력층 3개\n",
+    "# softmax : 총합이 1인 형태로 바꿔서 계산해 주는 함수\n",
     "model.add(Dense(3, activation='softmax'))\n",
     "\n",
     "# 모델 컴파일\n",
+    "# categorical_crossentropy 사용\n",
     "model.compile(loss='categorical_crossentropy',\n",
     "            optimizer='adam',\n",
     "            metrics=['accuracy'])\n",
