--- a/ML/run_project/13_Boston.ipynb
+++ b/ML/run_project/13_Boston.ipynb
@@ -455,8 +455,10 @@
     "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.3, random_state=seed)\n",
     "\n",
     "model = Sequential()\n",
+    "\n",
     "model.add(Dense(30, input_dim=13, activation='relu'))\n",
     "model.add(Dense(6, activation='relu'))\n",
+    "# 출력층 (weighte sum)\n",
     "model.add(Dense(1))\n",
     "\n",
     "model.compile(loss='mean_squared_error',\n",
@@ -465,6 +467,7 @@
     "model.fit(X_train, Y_train, epochs=200, batch_size=10)\n",
     "\n",
     "# 예측 값과 실제 값의 비교\n",
+    "# flatten() 함수 : 데이터 배열이 몇 차원이든 모두 1차원으로 바꿔 읽기 쉽게해 주는 함수\n",
     "Y_prediction = model.predict(X_test).flatten()\n",
     "for i in range(10):\n",
     "    label = Y_test[i]\n",
