--- a/ML/run_project/train/Proportion of Successs in Bernoulli Trails.ipynb
+++ b/ML/run_project/train/Proportion of Successs in Bernoulli Trails.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {
     "tags": []
    },
@@ -88,16 +88,21 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "b'$2b$12$R1U2nj7GfxZUsQ8pMky8veB8T40SI4SsSnkH5knivQr//SsmcqLDe'\n"
+      "b'$2a$10$L1DJ94ltewJqgthf0ctgyu1uGf7nb1xI5QcL7UHMc.f.LTFREPPoe'\nFalse\n"
      ]
     }
    ],
    "source": [
     "import bcrypt\n",
     "\n",
-    "password = '1234'\n",
-    "print(bcrypt.checkpw(bytes(password, encoding=\"ascii\"), hashedPassword))\n",
-    "\n"
+    "password = b\"1q2w3e4r!\"\n",
+    "hashedPassword = bcrypt.hashpw(password, bcrypt.gensalt(rounds=10, prefix=b\"2a\"))\n",
+    "\n",
+    "print(hashedPassword)\n",
+    "\n",
+    "userpass = \"password\"\n",
+    "\n",
+    "print(bcrypt.checkpw(bytes(userpass, encoding=\"ascii\"), hashedPassword))"
    ]
   },
   {
