--- a/ML/run_project/Assignment#4.ipynb
+++ b/ML/run_project/Assignment#4.ipynb
@@ -269,14 +269,78 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from functools import partial\n",
+    "\n",
+    "DefaultConv2D = partial(keras.layers.Conv2D,\n",
+    "                        kernel_size=3, activation='relu', padding=\"SAME\")\n",
+    "\n",
+    "model = keras.models.Sequential([\n",
+    "    DefaultConv2D(filters=128, kernel_size=3, input_shape=[28, 28, 1]),\n",
+    "    keras.layers.MaxPooling2D(pool_size=2),\n",
+    "    DefaultConv2D(filters=64),\n",
+    "    keras.layers.MaxPooling2D(pool_size=2),\n",
+    "    DefaultConv2D(filters=32),\n",
+    "    keras.layers.MaxPooling2D(pool_size=2),\n",
+    "    keras.layers.Flatten(),\n",
+    "    keras.layers.Dense(units=128, activation='relu'),\n",
+    "    keras.layers.Dropout(0.2),\n",
+    "    keras.layers.Dense(units=10, activation='softmax'),\n",
+    "])\n",
+    "\n",
+    "model.compile(loss=\"sparse_categorical_crossentropy\", \n",
+    "              optimizer=\"Adam\", \n",
+    "              metrics=[\"accuracy\"])\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "history = model.fit(X_train, y_train, epochs=30, \n",
+    "                    batch_size=16,\n",
+    "                    validation_data=(X_valid, y_valid))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score = model.evaluate(X_test, y_test)\n",
+    "X_new = X_test[:10] # pretend we have new images\n",
+    "y_pred = model.predict(X_new)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "pd.DataFrame(history.history).plot(figsize=(8, 5))\n",
+    "plt.grid(True)\n",
+    "plt.gca().set_ylim(0, 1)\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "imltf2",
-   "language": "python",
-   "name": "iml"
+   "name": "python3",
+   "display_name": "Python 3.8.5 64-bit ('ML_KNU': conda)",
+   "metadata": {
+    "interpreter": {
+     "hash": "83b9648b8c7b2ce0297848f32e51fcb1aa6d8d371421be083c83520ab3522382"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
@@ -288,7 +352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
